--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <div id="app"></div>
   <!-- built files will be auto injected -->
-
-  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+  
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,Object.entries,Object.values"></script>
 
   <!-- Optional JavaScript -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
