--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Подключение к Пульс Опросу на специальных условиях - iTeam</title>
 </head>
 
-<body>
+<body class="bg-dark">
   <div id="app"></div>
   <!-- built files will be auto injected -->
   
