--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
     crossorigin="anonymous">
-  <title>Корпоративная культура: с чего начать - iTeam</title>
+  <title>Бесплатный Онлайн Марафон - iTeam</title>
 </head>
 
-<body class="bg-dark">
+<body>
   <div id="app"></div>
   <!-- built files will be auto injected -->
   
