--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
     crossorigin="anonymous">
-  <title>Онлайн Марафон &laquo;Сделайте компанию управляемой и&nbsp;эффективной&raquo; - iTeam</title>
+  <title>Оплата - iTeam</title>
 </head>
 
 <body class="bg-dark">
